--- a/kal.html
+++ b/kal.html
@@ -61,7 +61,7 @@
 
     /* --- Jemně modré podbarvení sobot a volných nedělí --- */
     .cell.saturday, .cell.sunday {
-      background: #e6f2ff !important;
+      background: #bcbcbc !important;
     }
   </style>
 </head>
