--- a/bra_pc.html
+++ b/bra_pc.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <title>WaitBRA (PC verze)</title>
   <style>
-    body { background: #0066b3; color: white; font-family: 'Open Sans', sans-serif; padding: 30px; }
+    body { background: #0066b3; color: white; font-family: 'Open Sans', sans-serif; padding: 30px; transition: background 0.18s; }
+    body.found { background: #25cf43 !important; }
     .header-flex {
       display: flex;
       align-items: center;
@@ -167,6 +168,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
 </head>
 <body>
+  <audio id="notifSound" preload="auto">
+    <source src="https://cdn.pixabay.com/audio/2022/03/15/audio_115b9f1e84.mp3" type="audio/mp3">
+    <!-- krátký "ding" zvuk z pixabay, royalty free -->
+  </audio>
   <div class="header-flex">
     <h1>WaitBRA</h1>
     <img src="static/logo.png" alt="Logo" class="logo-header">
@@ -204,7 +209,6 @@
     let scanned = new Set();
     const STORAGE_KEY = "waitbra-pc-v1";
 
-    // Načíst uložená data z localStorage při načtení stránky
     window.addEventListener('DOMContentLoaded', function() {
       const stored = localStorage.getItem(STORAGE_KEY);
       if (stored) {
@@ -262,10 +266,8 @@
     }
 
     function renderTable() {
-      // Nejprve nalezené, pak nenalezené (scanned nahoře)
       const tbody = document.querySelector('#codeTable tbody');
       tbody.innerHTML = '';
-      // řazení: scanned nahoře
       let sorted = [...codes].sort((a, b) => {
         const aScanned = scanned.has(a.code) ? 0 : 1;
         const bScanned = scanned.has(b.code) ? 0 : 1;
@@ -307,6 +309,13 @@
       document.getElementById('modalCode').textContent = code;
       document.getElementById('modalZone').textContent = 'Zóna: ' + zone;
       document.getElementById('modalOverlay').style.display = 'flex';
+      // ---- Pozadí celé stránky na zeleno ----
+      document.body.classList.add('found');
+      // ---- Zvuk ----
+      try {
+        document.getElementById('notifSound').currentTime = 0;
+        document.getElementById('notifSound').play();
+      } catch (e) {}
       setTimeout(() => {
         document.getElementById('modalClose').focus();
       }, 100);
@@ -314,6 +323,8 @@
 
     function hideModal() {
       document.getElementById('modalOverlay').style.display = 'none';
+      // ---- Vrátit zpět původní pozadí ----
+      document.body.classList.remove('found');
       showBarcodeInput();
     }
 
@@ -341,28 +352,26 @@
       if (found && !scanned.has(found.code)) {
         scanned.add(found.code);
         saveToStorage();
-        showModal(found.code, found.zone); // Velké okno
+        showModal(found.code, found.zone);
         blinkInput();
         renderTable();
       }
-      // Kódy mimo seznam ignorovat
     }
 
     function blinkInput() {
       const input = document.getElementById('barcodeInput');
       input.classList.remove('blink');
-      void input.offsetWidth; // "restart" animace
+      void input.offsetWidth;
       input.classList.add('blink');
     }
 
-    // Export nenalezených krabic do CSV
     document.getElementById('exportBtn').addEventListener('click', function() {
       const notScanned = codes.filter(row => !scanned.has(row.code));
       if (notScanned.length === 0) {
         alert("Všechny krabice byly oskenovány!");
         return;
       }
-      let csvContent = "krabice;zona\r\n" + 
+      let csvContent = "krabice;zona\r\n" +
         notScanned.map(row => `${row.code};${row.zone}`).join("\r\n");
       let blob = new Blob([csvContent], { type: "text/csv;charset=utf-8;" });
       let link = document.createElement("a");
@@ -374,14 +383,12 @@
       document.body.removeChild(link);
     });
 
-    // Udržuj focus na poli (proti ztrátě focusu kliknutím, tabulátorem apod.)
     document.addEventListener('click', function() {
       const input = document.getElementById('barcodeInput');
       if (input && input.style.display !== "none" && document.getElementById('modalOverlay').style.display !== 'flex') input.focus();
     });
 
     document.addEventListener('keydown', function(e) {
-      // Stisknutí ESC smaže pole, pokud není otevřené modální okno
       if (e.key === "Escape" && document.getElementById('modalOverlay').style.display !== 'flex') {
         const input = document.getElementById('barcodeInput');
         if (input && input.style.display !== "none") input.value = "";
